Flutter跨平台移動開發實戰
/// 4.2.1 Dart語言基礎知識
/// 4.2.2 符號!,?和??的用法

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  local_auth: ^2.1.6
   # [20230804] AppBar create dependencies
   font_awesome_flutter: any
 
